--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,14 +2,14 @@ project:
   type: website
 
 website:
-  title: "dieters-blog-v2"
+  title: "dieters-blog"
   navbar:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
+        href: https://github.com/christofhenkel
       - icon: twitter
-        href: https://twitter.com
+        href: https://twitter.com/kagglingdieter
 format:
   html:
     theme: cosmo
