--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -5,7 +5,19 @@
 freeze: true
 
 # Enable banner style title blocks
-title-block-banner: true
+title-block-banner: false
+
+# Table of content settings
+toc: true
+toc-depth: 3
+
+page-layout: article
+
+#########################
+# You can skip this part in the first step
+format:
+  html:
+    include-after-body: ../footer.html
 
 comments: 
   utterances: 
