--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -8,17 +8,15 @@ freeze: true
 title-block-banner: false
 
 # Table of content settings
-toc: true
-toc-depth: 3
+# toc: true
+# toc-depth: 3
 
-page-layout: article
+page-layout: full
 
----
-website:
-  comments: 
-    utterances:
-      repo: ChristofHenkel/dieters-blog-v2
----
+comments: 
+  utterances:
+    repo: ChristofHenkel/dieters-blog-v2
+
 
 
 
